--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "vue-router": "^3.5.1",
         "vue-sweetalert2": "^4.2.0",
         "vue-toasted": "^1.1.28",
+        "vue2-timepicker": "^1.1.6",
         "vuetify": "^2.4.4",
         "vuex": "^3.6.2",
         "vuex-persistedstate": "^4.0.0-beta.3"
