--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "sweetalert2": "^10.14.0",
         "v-calendar": "^2.2.3",
         "vue-axios": "^3.2.4",
+        "vue-google-charts": "^0.3.3",
         "vue-input-tag": "^2.0.7",
         "vue-moment": "^4.1.0",
         "vue-multiselect": "^2.1.6",
