--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
         "sass-loader": "^8.0.2",
         "vue": "^2.5.17",
         "vue-loader": "^15.9.5",
-        "vue-template-compiler": "^2.6.10"
+        "vue-template-compiler": "^2.6.10",
+        "webpack-cli": "^4.9.2"
     },
     "dependencies": {
         "@websanova/vue-auth": "^4.1.1",
@@ -42,9 +43,11 @@
         "vue-router": "^3.5.1",
         "vue-sweetalert2": "^4.2.0",
         "vue-toasted": "^1.1.28",
+        "vue-xlsx": "^0.2.1",
         "vue2-timepicker": "^1.1.6",
         "vuetify": "^2.4.4",
         "vuex": "^3.6.2",
-        "vuex-persistedstate": "^4.0.0-beta.3"
+        "vuex-persistedstate": "^4.0.0-beta.3",
+        "xlsx": "^0.18.2"
     }
 }
